--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -1,3 +1,19 @@
 .pokemon-list-wrapper {
     margin: 2rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pokemon-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.controls button {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
 }
